--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">    
 </head>
 <body>
-    
+    <header>
+        <!-- logo -->
+        <!-- Title -->
+    </header>
+
+    <div id="container">
+        <header>
+            <!-- Buttons -->
+        </header>
+
+        <main>
+            <!-- List -->
+        </main>
+    </div>
 </body>
 </html>
