-Added images -Added markup and styling for main Header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Font: Roboto | Weight: 300, 500, 700 -->
+    <!-- Font: Poppins | Weight: 300, 500, 600 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <header>
-        <!-- logo -->
-        <!-- Title -->
+    <header id="mainHeader">
+        <img id="logo" src="img/logo.png" alt="Boolean">
+        <h1>Toboolist</h1>
     </header>
 
     <div id="container">
