--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </header>
 
     <div id="container">
-        <header>
-            <!-- Buttons -->
+        <header id="buttonContainer">
+            <button id="taskButton">Add Task</button>
+            <button id="sectionButton">Add Section</button>
         </header>
 
         <main>
