Added List Section Markup and styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,32 @@
         </header>
 
         <main>
-            <!-- List -->
+            <ul>
+                <li class="category">
+                    <h3>New Task</h3>
+                    <ul class="taskList">
+                        <li class="done editorial">Quarterly Newsletter</li>
+                    </ul>
+                </li>
+                <li class="category">
+                    <h3>Today</h3>
+                    <ul class="taskList">
+                        <li class="done editorial">Recruiting blog post</li>
+                        <li class="done q1Goals">Mobile app launch</li>
+                        <li class="notDone recruiting">Interview John H.</li>
+                        <li class="done mobile">Summit update to mobile storefronts</li>
+                    </ul>
+                </li>
+                <li class="category">
+                    <h3>Upcoming</h3>
+                    <ul class="taskList">
+                        <li class="notDone">Shedule meeting with Alex</li>
+                        <li class="done website">Homepage refresh</li>
+                        <li class="done sales">Onboard new Sales team members</li>
+                        <li class="done editorial">Review editorial calendar</li>
+                    </ul>
+                </li>
+            </ul>
         </main>
     </div>
 </body>
